# ChangeLog for net-fs/openafs-kernel
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/openafs-kernel/ChangeLog,v 1.95 2008/01/02 13:59:08 stefaan Exp $

  02 Jan 2008; Stefaan De Roeck <stefaan@gentoo.org>
  openafs-kernel-1.4.6.ebuild:
  Stable on alpha, bug #203573

  01 Jan 2008; Joseph Jezak <josejx@gentoo.org> openafs-kernel-1.4.6.ebuild:
  Marked ppc/ppc64 stable for bug #203573.

  31 Dec 2007; <welp@gentoo.org> openafs-kernel-1.4.6.ebuild:
  Stable on amd64; bug 203573

  29 Dec 2007; Markus Meier <maekke@gentoo.org> openafs-kernel-1.4.6.ebuild:
  x86 stable, security bug #203573

*openafs-kernel-1.4.6 (28 Dec 2007)

  28 Dec 2007; Stefaan De Roeck <stefaan@gentoo.org>
  +openafs-kernel-1.4.6.ebuild:
  Security bug #203573: bump to openafs version 1.4.6

  13 Dec 2007; Stefaan De Roeck <stefaan@gentoo.org>
  -files/openafs-linux-2.6.23.patch, -files/openafs-ppc64.patch,
  -files/openafs-sparc.patch, -files/openafs-vserver.patch,
  -openafs-kernel-1.4.4_p20070724-r2.ebuild, openafs-kernel-1.5.27.ebuild:
  Remove obsolete files

  06 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  openafs-kernel-1.4.5.ebuild:
  ppc stable, bug #199876

  28 Nov 2007; Stefaan De Roeck <stefaan@gentoo.org>
  openafs-kernel-1.4.5.ebuild:
  Stable on alpha

  26 Nov 2007; Stefaan De Roeck <stefaan@gentoo.org>
  -openafs-kernel-1.4.4.ebuild, -openafs-kernel-1.4.4_p20070724.ebuild,
  -openafs-kernel-1.4.5_pre1.ebuild, -openafs-kernel-1.5.19.ebuild:
  Remove obsolete versions

  23 Nov 2007; Christoph Mende <angelos@gentoo.org>
  openafs-kernel-1.4.5.ebuild:
  Stable on amd64 wrt bug #199876

  23 Nov 2007; Markus Meier <maekke@gentoo.org> openafs-kernel-1.4.5.ebuild:
  x86 stable, bug #199876

  23 Nov 2007; Markus Rothe <corsair@gentoo.org>
  openafs-kernel-1.4.5.ebuild:
  Stable on ppc64; bug #199876

*openafs-kernel-1.5.27 (15 Nov 2007)
*openafs-kernel-1.4.5 (15 Nov 2007)
