@@ -1,6 +1,12 @@
 # ChangeLog for net-fs/openafs-kernel
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/openafs-kernel/ChangeLog,v 1.95 2008/01/02 13:59:08 stefaan Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/openafs-kernel/ChangeLog,v 1.96 2008/02/22 14:46:20 stefaan Exp $
+
+*openafs-kernel-1.4.6_p20080222 (22 Feb 2008)
+
+  22 Feb 2008; Stefaan De Roeck <stefaan@gentoo.org>
+  +openafs-kernel-1.4.6_p20080222.ebuild:
+  Add version pulled from stable-cvs for linux-2.6.24 compatibility (bug #207882)
 
   02 Jan 2008; Stefaan De Roeck <stefaan@gentoo.org>
   openafs-kernel-1.4.6.ebuild:
